--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,24 @@ td{ width: 100%;
     background-color: #f4f4f4;
 
 }
+form{
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 800px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1)
+
+} 
+
+input, textarea, select{
+    width: 90%; 
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+}
+input[type="submit"]:hover{
+background-color: #45a049;
+}
